??-01-2013 4.1.14
- Events will create a UUID on databaseCheck()
- Event store will display the tasklists of all selected calendars 
- In the email template dialog the button to add the company name to a template is fixed
- Added support for contact template tags in the email template from the ticket system

04-01-2012 4.1.13
- Wrong mails for resource confirmation
- Use mysqldump for backing up mysql databases now. Old script skipped databases with a hyphen in the name.
- Colors in calendar are working again.
- Color choose dialog checks ACL.
- Refresh account in cached e-mail messages
- Monthly recurring events could jump to 0:00 hours on Debian but not on Ubuntu
- Updated German
- Hide portlet panel for emails when no folders are selected
- Request only first page of calendars in init
- Cancelled events show red dot

03-01-2012 4.1.12
- New parameter for disabling editing of e-mail aliases $config['email_disable_aliases']=true;
- Reverted fix for forwarding duplicate attachment names

03-01-2012 4.1.11
- Added ticket template files to the Example template of the sites module.
- Add use permissions to members of a group by default and a small bugfix
- Get a direct link to open a folder in the file browser
- Bug in adding participants
- Server error when doing old library requests
- Updated German language
- Changing an event from repeating to none repeating could cause an invalid view
- Bug with merging custom fields
- Bug with truncating calendars
- One day missing in Outlook bug

02-01-2012 4.1.10
- 4.1.9 was not build from new repository.

02-01-2012 4.1.9
- Merged fixes from 4.0.145
- Better grid sorting error.
- Better error message for scanbox when linking to items that do not support files.

30-12-2012 4.1.8
- Incorrect data type for default numeric mysql fields
- Fix for servermanager quota's divided by 1024

17-12-2012 4.1.7
- Resource conflict check fixed
- 4.0.143 and 4.0.144 fixes merged